test/ill-formed/0002_array_ret_type.c
typedef int int_array[5];
int_array f ();
